# CS4800_sunset

./: .gitignore  .gitmodules  .toggletasks.json  CMakeLists.txt  README.md  VulkanTest  grid  main.cpp
res/model/: mountain.mtl
res/shader/: atmosphere.frag  atmosphere.vert  cloud.frag  cloud.vert  grid.frag  grid.vert  model.frag  skybox.frag  skybox.vert  triangle.frag  triangle.vert
res/skybox/: skybox.mtl
src/: device.cpp  device.hpp  engine.cpp  engine.hpp  instance.cpp  instance.hpp  main.cpp  pipeline.cpp  pipeline.hpp  swapchain.cpp  swapchain.hpp  window.cpp  window.hpp
src/application/: application.cpp  application.hpp  camera_controller.cpp  camera_controller.hpp  input.cpp  input.hpp
src/bootstrap/: device.cpp  device.hpp  instance.cpp  instance.hpp  pipeline.cpp  pipeline.hpp  pipeline_builder.cpp  pipeline_builder.hpp  shader.cpp  shader.hpp  shader_lib.cpp  shader_lib.hpp  swapchain.cpp  swapchain.hpp  vertex_array.cpp  vertex_array.hpp  window.cpp  window.hpp
src/cellular/: grid.cpp  grid.hpp
src/renderer/: IndexBuffer.cpp  IndexBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp  camera.cpp  camera.hpp  index_buffer.cpp  index_buffer.hpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shader_lib.cpp  shader_lib.hpp  texture.cpp  texture.hpp  texture_lib.cpp  texture_lib.hpp  transform.cpp  transform.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/util/: constants.hpp  log.cpp  log.hpp  memory.hpp  profiler.cpp  profiler.hpp
